<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlack"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="@color/bgBlack"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="32dp">

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/branch_rec"
                android:textColor="@color/white" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/tv_title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_title"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_author1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_author"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/bgMid"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_title"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_author2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_author"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_layout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/bgBottom"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/tv_title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_title"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_author3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_author"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>